Wed Apr 30 15:25:15 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (link-dynamic-module): Do not catch errors from
 	dynamic-link and dynamic-call.  When the shared library exists it
 	is now assumed to be suitable for a dynamic C module.
	
Fri Apr 25 21:21:35 1997  Marius Vollmer  <mvo@zagadka.ping.de>

	* boot-9.scm (process-use-modules): New function to support the
 	use-modules macro
	(use-modules): throw an error iff one of the requested modules
	can't be found.
	
Tue Apr 29 06:54:46 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm: don't define timer-thunk or gc-thunk.

Sun Apr 27 17:56:09 1997  Jim Blandy  <jimb@floss.cyclic.com>

	* aclocal.m4: Removed; unnecessary, given changes of Apr 24.

	* Makefile.am (subpkgdatadir): Use "ice-9" instead of "@module@";
	we're not using AM_INIT_GUILE_MODULE any more.
	* Makefile.in: Regeneratitetedrerd.

Thu Apr 24 01:33:33 1997  Jim Blandy  <jimb@floss.cyclic.com>

	Get 'make dist' to work again.
	* Makefile.am (EXTRA_DIST): Remove PLUGIN files.
	* Makefile.in: Regenerated, like two tons of fleas.

	Changes for reduced Guile distribution: one configure script,
	no plugins.
	* configure.in, configure: Removed.
	* Makefile.in: Regenerated.

Sat Apr 19 08:03:50 1997  Jim Blandy  <jimb@floss.cyclic.com>

*	* boot-9.scm (eval-string, command-line, load-user-init): New
	functions.

Sat Apr 12 08:27:05 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (log10): defined.

Tue Apr  1 17:46:49 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* expect.scm (expect-select): correct the millisecond timeout
	arithmetic (from Marko.Kohtala@ntc.nokia.com).
	
Mon Mar 31 03:23:19 1997  Gary Houston  <ghouston@actrix.gen.nz>

	* boot-9.scm (open-input-pipe, open-output-pipe): defined here
	instead of in libguile.
	(tm:sec etc.) new accessors for broken-down time.
	(set-tm:sec etc.) new setters for broken-down time.

Thu Mar 27 05:06:00 1997  Gary Houston  <ghouston@actrix.gen.nz>
